--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,11 @@
   "compilerOptions": {
     "lib": ["ES2023"],
     "module": "Node16",
-    "target": "ES2022",   
+    "target": "ES2022",
     "strict": true,
     "noImplicitAny": true,
-    "strictNullChecks": true                
+    "strictNullChecks": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   }
 }
